--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Ingresa el producto"
+        android:textSize="20dp"
         android:layout_marginTop="40dp"
         android:textStyle="bold"
         android:textColor="@color/black"/>
@@ -28,6 +29,7 @@
         android:layout_height="40dp"
         android:background="@color/white"
         android:layout_marginTop="70dp"
+        android:padding="5dp"
         android:hint="Ejem:Teléfono"
         android:textColor="@color/black"
         android:textSize="15dp"
